Added meta charset UTF-8 tag

--- a/.guides/content/header.html
+++ b/.guides/content/header.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>Intro to Web Development</title>
     <style>body:not(.loaded) .loaded, body.loaded .not-loaded {display: none}</style>
     <script src="https://boldidea.org/static/codio-guide-template/main.bundle.js?2"></script>
