fixed "about my mentor" 3rd page

--- a/.guides/content/About-My-Mentor--Preview-859b.html
+++ b/.guides/content/About-My-Mentor--Preview-859b.html
@@ -29,28 +29,34 @@ The preview should look like this:
 If anything looks off, try updating your code, then click the preview refresh button ![refresh button](.guides/img/refresh-preview.png) to re-load your page.
 </script>
 <script>
+  function load() {
+    document.querySelector('iframe.mentor-example').contentDocument.write(
+      `
+      <!DOCTYPE html>
+      <html>
+        <body>
+          <h1>Kris Fawcett</h1>
+          <h2>Never dig straight down!</h2>
+          <p>
+            Kris is an IT support guru and has been a Bold Idea mentor since 2018.
+          </p>
+          <p>Some of Kris's favorite things:</p>
+          <ul>
+            <li>Minecraft</li>
+            <li>Technology</li>
+            <li>Online gaming</li>
+          </ul>
+        </body>
+      </html>
+      `
+    );
+  }
+  
   document.addEventListener('DOMContentLoaded', function() {
-    doc.addEventListener('loaded', function() {
-      document.querySelector('iframe.mentor-example').contentDocument.write(
-        `
-        <!DOCTYPE html>
-        <html>
-          <body>
-            <h1>Kris Fawcett</h1>
-            <h2>Never dig straight down!</h2>
-            <p>
-              Kris is an IT support guru and has been a Bold Idea mentor since 2018.
-            </p>
-            <p>Some of Kris's favorite things:</p>
-            <ul>
-              <li>Minecraft</li>
-              <li>Technology</li>
-              <li>Online gaming</li>
-            </ul>
-          </body>
-        </html>
-        `
-      );
-    });
+    if (document.body.classList.contains('loaded')) {
+      load();
+    } else {
+      doc.addEventListener('loaded', load);
+    }
   });
 </script>
