Added guidance on naming files correctly

--- a/.guides/content/Add-the--Contact-Us--page-2436.html
+++ b/.guides/content/Add-the--Contact-Us--page-2436.html
@@ -5,7 +5,10 @@ Your client has given you instructions on how to make the "Contact Us" page. Ope
 
 ## Create a new page and add the sections
 
-1. Create a new file called `contact-us.html`.
+1. Create a new file called `contact-us.html` (all lowercase).
+   :::infobox .warning
+   If the file doesn't show when you create it, make sure you are spelling the file name exactly as `contact-us.html` (all lowercase).
+   :::
 2. Create the base document structure like before, with `<!doctype html>`, `<html>`, `<head>`, `<link>`, and `<body>`.
    ::: infobox
    **Pro tip:** A really easy way to do this is copy-and-paste an existing page, and remove everything inside the `<body>` element.
