--- a/.guides/content/Create-a-new-page-for-the-table-9576.html
+++ b/.guides/content/Create-a-new-page-for-the-table-9576.html
@@ -7,7 +7,10 @@ HTML Reference: [Document Structure][1]{.preview data-panel="2"}, [Linking a Sty
 
 Your client has given you content for a new page. 
 
-1. Create a new file by selecting "File -> New File". Name the file `table.html`.
+1. Create a new file by selecting "File -> New File". Name the file `table.html` (all lowercase).
+   :::infobox .warning
+   If the file doesn't show when you create it, make sure you are spelling the file name exactly as `table.html` (all lowercase).
+   :::
 {.steps}
 
 ## Create the base HTML structure
