--- a/.guides/content/Create-the--About-Us--page-83ac.html
+++ b/.guides/content/Create-the--About-Us--page-83ac.html
@@ -10,7 +10,10 @@ HTML Reference: [Document Structure][1]{.preview data-panel="2"},
 [Paragraphs][3]{.preview data-panel="2"}
 :::
 
-1. First, create a new HTML file called `about-us.html`.
+1. First, create a new HTML file called `about-us.html` (all lowercase).
+   :::infobox .warning
+   If the file doesn't show when you create it, make sure you are spelling the file name exactly as `about-us.html` (all lowercase).
+   :::
 {.steps}
 
 You should have a good idea of how to create a new page by now, but here's a quick reminder:
