--- a/.guides/content/Upload-the-photo-0d0f.html
+++ b/.guides/content/Upload-the-photo-0d0f.html
@@ -6,6 +6,9 @@ Before we can add a photo to our page, we need to *upload*{.voc} it to our websi
 Because we might be uploading a lot of photos, it would help to keep them all in a *folder*{.voc}.
 
 1. Create a new folder called `images` (all lowercase) by clicking *File > New Folder*.
+   :::infobox .warning
+   If the folder doesn't show when you create it, make sure you are spelling the folder name exactly as `images` (all lowercase).
+   :::
 2. Open your [client email][1]{.preview data-panel="2"}
 3. Download the image attachment from the email
 4. Select the images folder, then click *File > Upload*.
