--- a/.guides/content/Start-a-new-HTML-page-6a34.html
+++ b/.guides/content/Start-a-new-HTML-page-6a34.html
@@ -3,8 +3,11 @@
 
 On the far left, you'll see the *file tree*{.voc}. This is a list of files in your workspace.
 
-1. Create a new file called `index.html` by clicking the "File" menu, then "New File". 
+1. Create a new file called `index.html` (all lowercase) by clicking the "File" menu, then "New File".
    ![new file demo](.guides/img/new-file-index.gif)
+   :::infobox .warning
+   If the file doesn't show when you create it, make sure you are spelling the file name exactly as `index.html` (all lowercase).
+   :::
 2. Then, add the following code to your index.html file to define the document structure (you’ll need to do this every time you start a new HTML page):
 
 ```html
