Fixed typo in Part 4 (thanks Janie!)

--- a/.guides/content/Emphasize-the-company-name-014a.html
+++ b/.guides/content/Emphasize-the-company-name-014a.html
@@ -14,7 +14,7 @@ Your client has asked you to emphasize their company name anywhere that it's men
 The `<em>` element is what's known as an *inline*{.voc} element. In HTML, elements can be either *block*{.voc} or *inline*{.voc}, which affects how they are laid out on the page.
 
 1. Learn about [Inline vs. Block elements][1]{.preview data-panel="2"} in your CSS Reference.
-2. Find the company name anywhere it's mentioned your code (not including the `<h1>` on the home page) and enclose it within `<em>` and `</em>` tags. Be sure to check all `.html` pages.
+2. Find the company name anywhere it's mentioned in your code (not including the `<h1>` on the home page) and enclose it within `<em>` and `</em>` tags. Be sure to check all `.html` pages.
 3. ![](.guides/img/refresh-preview.png) Refresh your preview and check the pages you just changed. By default, the browser will set the font style to *italic* for all `<em>` elements. But, we don't need it to be italic. Instead, we want it to be bold and a different color. 
 {.steps}
 
