--- a/.guides/content/Using-the-HTML-and-CSS-reference-9c19.html
+++ b/.guides/content/Using-the-HTML-and-CSS-reference-9c19.html
@@ -9,7 +9,7 @@ We've created two easy-to-read reference guides to help beginner web developers,
 
 ## Try it out! View the HTML Reference
 
-1. To open the HTML Reference, Click the dropdown button next to the Preview menu at the top of the screen:
+1. To open the HTML Reference, click the dropdown button next to the Preview menu at the top of the screen:
 
    ![](.guides/img/reference-guides-menu.png)
 2. This will open the reference guide in a new tab in whatever panel you have selected. Try moving the tab to the same panel as this guide:
