Updated static content urls

--- a/.guides/content/header.html
+++ b/.guides/content/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Intro to Web Development</title>
     <style>body:not(.loaded) .loaded, body.loaded .not-loaded {display: none}</style>
-    <script src="https://boldidea.org/static/codio-guide-template/main.bundle.js?2"></script>
+    <script src="https://static.boldidea.org/codio-guide-template/main.bundle.js?2"></script>
   </head>
   <body>
     <div class="loading not-loaded">
