updated static content paths

--- a/.guides/content/Add-a-border-around-the-sections-5939.html
+++ b/.guides/content/Add-a-border-around-the-sections-5939.html
@@ -2,7 +2,7 @@
 # Add a border around the sections
 
 ::: infobox .find
-CSS Reference: [Selecting Elements](https://courses.boldidea.org/webdev/css-reference/#selecting-elements){.preview data-panel="2"}
+CSS Reference: [Selecting Elements](https://static.boldidea.org/courses/webdev/css-reference/#selecting-elements){.preview data-panel="2"}
 :::
 
 1. Add a new *rule*{.voc} in your stylesheet that selects the `<section>` elements and adds a border style around it. 
