--- a/.guides/content/Add-the-company-description-dd84.html
+++ b/.guides/content/Add-the-company-description-dd84.html
@@ -2,7 +2,7 @@
 # Add the company description
 
 ::: infobox .find
-HTML Reference: [Paragraphs](https://courses.boldidea.org/webdev/html-reference/#paragraphs){.preview data-panel="2"}
+HTML Reference: [Paragraphs](https://static.boldidea.org/courses/webdev/html-reference/#paragraphs){.preview data-panel="2"}
 :::
 
 Think of a short description of your client's company based on what you've read about them in their [email][1]{.preview data-panel="2"}.
@@ -13,5 +13,5 @@ To create a paragraph of text, use the `<p>` element. Note that blank lines in y
 
 ![](.guides/img/refresh-preview.png) Refresh the preview. You should now see your paragraph underneath the heading.
 
-[1]: https://courses.boldidea.org/webdev/companies/email.html#part1
+[1]: https://static.boldidea.org/courses/webdev/companies/email.html#part1
 </script>
