--- a/.guides/content/Add-the-company-name-9921.html
+++ b/.guides/content/Add-the-company-name-9921.html
@@ -2,7 +2,7 @@
 # Add the company name
 
 ::: infobox .find
-HTML Reference: [Headings](https://courses.boldidea.org/webdev/html-reference/#headings){.preview data-panel="2"}
+HTML Reference: [Headings](https://static.boldidea.org/courses/webdev/html-reference/#headings){.preview data-panel="2"}
 :::
 
 Your pages will likely have sections of content on them, and each *section*{.voc} should have a heading. The `<body>` is our *top-level*{.voc} section (the outermost), so we’ll use the `<h1>` element. 
@@ -30,5 +30,5 @@ Below your editor is the preview panel.
 ![](.guides/img/refresh-preview.png) Click the refresh button to preview your page. You should see your page heading in the preview.
 {.steps .continue}
 
-[1]: https://courses.boldidea.org/webdev/companies/email.html#part1
+[1]: https://static.boldidea.org/courses/webdev/companies/email.html#part1
 </script>
