--- a/.guides/content/Add-the-lists-cede.html
+++ b/.guides/content/Add-the-lists-cede.html
@@ -2,7 +2,7 @@
 # Add the lists to your page
 
 ::: infobox .find
-HTML Reference: [Lists](https://courses.boldidea.org/webdev/html-reference/#lists){.preview data-panel="2"}
+HTML Reference: [Lists](https://static.boldidea.org/courses/webdev/html-reference/#lists){.preview data-panel="2"}
 :::
 
 Your client gave you two types of lists. In one list, the order doesn’t really matter. But in the other list, the order is important (for example, in a “Top 10” list).
@@ -41,5 +41,5 @@ Your client gave you two types of lists. In one list, the order doesn’t really
 
 Great work! Next we're going to learn how to add some **style** to our page.
 
-[1]: https://courses.boldidea.org/webdev/companies/email.html#part1
+[1]: https://static.boldidea.org/courses/webdev/companies/email.html#part1
 </script>
