--- a/.guides/content/Add-the-photo-to-the-page-1d4e.html
+++ b/.guides/content/Add-the-photo-to-the-page-1d4e.html
@@ -2,7 +2,7 @@
 # Add the photo to the page
 
 ::: infobox .find
-HTML Reference: [Images](https://courses.boldidea.org/webdev/html-reference/#images)
+HTML Reference: [Images](https://static.boldidea.org/courses/webdev/html-reference/#images)
 :::
 
 The `<img>` element embeds an image into the page. It has an *attribute*{.voc} called `"src"` that tells the browser where to find the image so that it can display it on the page.
