--- a/.guides/content/Create-the-home-page-cb1a.html
+++ b/.guides/content/Create-the-home-page-cb1a.html
@@ -20,8 +20,8 @@ On the far left, you'll see the *file tree*{.voc}. This is a list of files in yo
 </script>
 <script>
   /*
-  codioUtils.closePreviewTab('https://courses.boldidea.org/webdev/companies/select-company.html');
-  codio.open('preview', 'https://courses.boldidea.org/webdev/companies/email.html#part1', 0);
+  codioUtils.closePreviewTab('https://static.boldidea.org/courses/webdev/companies/select-company.html');
+  codio.open('preview', 'https://static.boldidea.org/courses/webdev/companies/email.html#part1', 0);
   codio.open('file', 'index.html', 0);
   */
 </script>
