--- a/.guides/content/Put-the-lists-and-headings-in-sections-5725.html
+++ b/.guides/content/Put-the-lists-and-headings-in-sections-5725.html
@@ -2,7 +2,7 @@
 # Put the lists and headings in sections
 
 ::: infobox .find
-HTML Reference: [Sectioning](https://courses.boldidea.org/webdev/html-reference/#sectioning)
+HTML Reference: [Sectioning](https://static.boldidea.org/courses/webdev/html-reference/#sectioning)
 :::
 
 ![](.guides/img/sectioned-lists.png){.float-right}
